sf-hrms/force-app/main/default/objects/Reimbursement__c/fields/Amount_Approved__c.field-meta.xml
<CustomField><fullName>Amount_Approved__c</fullName><label>Amount Approved</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>