sf-hrms/force-app/main/default/objects/Reimbursement__c/fields/Amount_Claimed__c.field-meta.xml
<CustomField><fullName>Amount_Claimed__c</fullName><label>Amount Claimed</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>