sf-hrms/force-app/main/default/objects/Reimbursement__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursement_Approvers</relationshipName>
</CustomField>