sf-hrms/force-app/main/default/objects/Reimbursement__c/fields/Component__c.field-meta.xml
<CustomField><fullName>Component__c</fullName><label>Component</label><type>Lookup</type><referenceTo>Salary_Component__c</referenceTo><relationshipLabel>Reimbursements</relationshipLabel><relationshipName>Reimbursements</relationshipName></CustomField>