sf-hrms/force-app/main/default/objects/Reimbursement__c/fields/Cycle__c.field-meta.xml
<CustomField><fullName>Cycle__c</fullName><label>Payroll Cycle</label><type>Lookup</type><referenceTo>Payroll_Cycle__c</referenceTo><relationshipLabel>Reimbursements</relationshipLabel><relationshipName>Reimbursements</relationshipName></CustomField>