sf-hrms/force-app/main/default/objects/Reimbursement__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Submitted</fullName><default>true</default></value><value><fullName>Approved</fullName><default>false</default></value><value><fullName>Rejected</fullName><default>false</default></value><value><fullName>Paid</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>